--- a/biosite.css
+++ b/biosite.css
@@ -55,87 +55,38 @@ a:hover {
   img {
     vertical-align: middle;
   }
-  
-  /* Position the image container (needed to position the left and right arrows) */
-  .container {
-    position: relative;
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
   }
   
-  /* Hide the images by default */
-  .mySlides {
-    display: none;
-  }
-  
-  /* Add a pointer when hovering over the thumbnail images */
-  .cursor {
-    cursor: pointer;
-  }
-  
-  /* Next & previous buttons */
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 40%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: black;
-    font-weight: bold;
-    font-size: 25px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #000;
-    font-size: 18px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  /* Container for image text */
-  .caption-container {
-    text-align: left;
-    background-color: black;
-    padding: 2px 16px;
-    color: white;
-    font-family: 'Varela Round', sans-serif;
-  }
-  
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Six columns side by side */
+  /* Create four equal columns that sits next to each other */
   .column {
-    float: left;
-    width: 16.66%;
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
   }
   
-  /* Add a transparency effect for thumnbail images */
-  .demo {
-    opacity: 0.6;
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
   }
   
-  .active,
-  .demo:hover {
-    opacity: 1;
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
   }
