--- a/biosite.css
+++ b/biosite.css
@@ -104,16 +104,23 @@ a:hover {
   }
 
   .submitbtn {
-    background-color: #04AA6D;
+    background-color: green;
     color: white;
+    font-family: 'Lora', serif;
+    font-size: 16px;
     padding: 16px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 75%;
-    opacity: 0.9;
+    opacity: 1;
   }
 
   .submitbtn:hover {
-    opacity:1;
+    opacity: 0.9;
+  }
+
+  .filesbtn {
+    font-family: 'Lora', serif;
+    font-size: 16px;
   }
