--- a/biosite.css
+++ b/biosite.css
@@ -136,3 +136,72 @@ a:hover {
   .countrybtn:focus{
     background-color: lightblue;
   }
+  
+  body {
+    margin: 2;
+    max-width: 1200px;
+    background: #FFFFFF;
+    padding: 5px;
+  }
+  
+  /* Style the header */
+  .header {
+    background-color: #ffffff;
+    text-align: center;
+  }
+  
+  /* Style the top navigation bar */
+  .topnav {
+    overflow: hidden;
+    background-color: #f7a2fa;
+    font-family: 'Lora', serif;
+  }
+  
+  /* Style the topnav links */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #000000;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+  }
+  
+  /* Change color on hover */
+  .topnav a:hover {
+    background-color: #de92e0;
+    color: black;
+  }
+  
+ /* left column */
+ .leftcolumn {
+    float:left;
+    width: 70%;
+    margin-top: 20px;
+    background-color: #f1f1f1;
+    padding: 10px;
+  }
+
+  /* right column */
+  .rightcolumn {
+    float:left;
+    width: 25%;
+    padding-left: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    background-color: #f1f1f1;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column.side, .column.middle {
+      width: 100%;
+    }
+  }
