--- a/biosite.css
+++ b/biosite.css
@@ -228,11 +228,15 @@ a:hover {
     transition: 0.3s;
   }
 
+  #example3:hover {opacity: 0.7;}
+
   #example4 {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
   }
+
+  #example4:hover {opacity: 0.7;}
 
   #example5 {
     border-radius: 5px;
@@ -240,11 +244,15 @@ a:hover {
     transition: 0.3s;
   }
 
+  #example5:hover {opacity: 0.7;}
+
   #example6 {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
   }
+
+  #example6:hover {opacity: 0.7;}
 
   #example7 {
     border-radius: 5px;
@@ -252,11 +260,15 @@ a:hover {
     transition: 0.3s;
   }
 
+  #example7:hover {opacity: 0.7;}
+
   #example8 {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
   }
+
+  #example8:hover {opacity: 0.7;}
 
   #example9 {
     border-radius: 5px;
@@ -264,12 +276,15 @@ a:hover {
     transition: 0.3s;
   }
 
+  #example9:hover {opacity: 0.7;}
+
   #example10 {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
   }
 
+  #example10:hover {opacity: 0.7;}
 
   #example11 {
     border-radius: 5px;
@@ -277,11 +292,15 @@ a:hover {
     transition: 0.3s;
   }
 
+  #example11:hover {opacity: 0.7;}
+
   #example12 {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
   }
+
+  #example12:hover {opacity: 0.7;}
 
   #example13 {
     border-radius: 5px;
@@ -289,11 +308,15 @@ a:hover {
     transition: 0.3s;
   }
 
+  #example13:hover {opacity: 0.7;}
+
   #example14 {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
   }
+
+  #example14:hover {opacity: 0.7;}
 
   #example15 {
     border-radius: 5px;
@@ -301,11 +324,15 @@ a:hover {
     transition: 0.3s;
   }
 
+  #example15:hover {opacity: 0.7;}
+
   #example16 {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
   }
+
+  #example16:hover {opacity: 0.7;}
 
   #example17 {
     border-radius: 5px;
@@ -313,11 +340,23 @@ a:hover {
     transition: 0.3s;
   }
 
+  #example17:hover {opacity: 0.7;}
+
   #example18 {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
   }
+
+  #example18:hover {opacity: 0.7;}
+
+  #example19 {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  #example19:hover {opacity: 0.7;}
 
   /* The Modal (background) */
 .modal {
