--- a/biosite.css
+++ b/biosite.css
@@ -90,56 +90,10 @@ a:hover {
       max-width: 100%;
     }
   }
-
-  input[type=text], select, textarea {
-    width: 75%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
-  }
-
-  input[type=text]:focus {
-    background-color: lightblue;
-  }
-
-  .submitbtn {
-    background-color: green;
-    color: white;
-    font-family: 'Lora', serif;
-    font-size: 16px;
-    padding: 16px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 75%;
-    opacity: 1;
-  }
-
-  .submitbtn:hover {
-    opacity: 0.9;
-  }
-
-  .filesbtn {
-    font-family: 'Lora', serif;
-    font-size: 16px;
-  }
-
-  .requestbox {
-    height: 200px;
-  }
-
-  .requestbox:focus {
-    background-color: lightblue;
-  }
-
-  .countrybtn:focus{
-    background-color: lightblue;
-  }
   
   body {
     margin: 2;
-    max-width: 1200px;
+    max-width: 1400px;
     background: #FFFFFF;
     padding: 5px;
   }
@@ -358,6 +312,15 @@ a:hover {
 
   #example19:hover {opacity: 0.7;}
 
+  #new1 {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
+  #new1:hover {opacity: 0.7;}
+
+
   /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -434,4 +397,39 @@ a:hover {
   .modal-content {
     width: 100%;
   }
+}
+
+/* start of CSS for contact form on index.html */
+
+input[type=text], select, textarea {
+  width: 75%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+input[type=text]:focus {
+  background-color: lightblue;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  opacity: 0.9;
+}
+
+.requestbox {
+  height: 200px;
+}
+
+.requestbox:focus {
+  background-color: lightblue;
 }
