--- a/fmg.css
+++ b/fmg.css
@@ -1,6 +1,44 @@
-html, body {
+/*
+======================================
+; Title: fmg.css 
+; Author: Chris Gorham
+; Date: 11 Jan 2023
+; Description: This code establishes the styling for the entire site
+; Sources Used: W3 Schools Theme
+;=====================================
+*/
+
+/* creates all the values and sets all the variable names for the light theme */
+body.light-theme {
+  --text-color: #000;
+  --background-color: #fff;
+  --frame-color:#f1f1f1;
+  --link-color: #FE6666;
+  --visited-link-color: #FE6666;
+  --link-hover: #FF6699;
+
+  }
+  
+  /* creates all the values and sets all the variable names for the dark theme */
+  body.dark-theme {
+  --text-color: #fff;
+  --background-color: #303030;
+  --frame-color: #585858;
+  --link-color: #FE6666;
+  --visited-link-color: #FE6666;
+  --link-hover: #FF6699;
+
+  }
+
+
+body {
   font-family: 'Lora', serif;
-    font-size: 16px;
+  color: var(--text-color);
+  font-size: 16px;
+  background-color: var(--background-color);
+  margin: 2;
+  max-width: 1400px;
+  padding: 2px;
 }
 
 p {font-family: 'Lora', serif;
@@ -8,33 +46,42 @@ p {font-family: 'Lora', serif;
 }
 
 h1 {
-    font-family: 'Varela Round', sans-serif; 
+    font-family: 'jennifer_lynneregular', 'Varela Round', sans-serif; 
+    font-size: 100px;
     font-weight: 400;
-    font-size: 34px;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 h2 {
-    font-family: 'Varela Round', sans-serif; 
+    font-family: 'Sofia Sans Extra Condensed', 'Varela Round', sans-serif; 
     font-weight: 400;
-    font-size: 24px;
+    font-size: 96px;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 h3 {
     font-family: 'Varela Round', sans-serif; 
     font-weight: 400;
-    font-size: 18px;
+    font-size: 72px;
+}
+
+.toggle {
+  font-family: 'Lora', serif;
+    font: size 16px;
 }
 
 a:link {
-    color:#782b7a;
+    color: var(--link-color);
 }
 
 a:visited {
-    color:#782b7a;
+    color: var(--visited-link-color);
 }
 
 a:hover {
-    color: #c581c7;
+    color: var(--link-hover);
 }
 
 #disclaimer {
@@ -47,6 +94,14 @@ a:hover {
 
 #newcreations {
     text-align: center;
+}
+
+#icon-mode:hover {
+  cursor: pointer;
+}
+
+#icon-text {
+  padding-left: 10px;
 }
 
 * {
@@ -92,23 +147,16 @@ a:hover {
     }
   }
   
-  body {
-    margin: 2;
-    max-width: 1400px;
-    background: #FFFFFF;
-    padding: 5px;
-  }
-  
   /* Style the header */
   .header {
-    background-color: #ffffff;
+    background-color: var(--background-color);
     text-align: center;
   }
   
   /* Style the top navigation bar */
   .topnav {
     overflow: hidden;
-    background-color: #ffdeff;
+    background-color: #fecac4;
     font-family: 'Lora', serif;
   }
   
@@ -124,7 +172,7 @@ a:hover {
   
   /* Change color on hover */
   .topnav a:hover {
-    background-color: #de92e0;
+    background-color: #FEA0AE;
     color: black;
   }
   
@@ -133,18 +181,18 @@ a:hover {
     float:left;
     width: 70%;
     margin-top: 20px;
-    background-color: #f1f1f1;
+    background-color: var(--frame-color);
     padding: 10px;
   }
 
   /* right column */
   .rightcolumn {
     float:left;
-    width: 25%;
+    width: 28%;
     padding-left: 20px;
     margin-top: 20px;
     margin-left: 20px;
-    background-color: #f1f1f1;
+    background-color: var(--frame-color);
   }
   
   /* Clear floats after the columns */
@@ -476,3 +524,8 @@ input[type=submit]:hover {
   text-align: center;
   float: center;
 }
+
+.pull-right {
+  float: right;
+}
+
