--- a/fmg.css
+++ b/fmg.css
@@ -30,14 +30,12 @@ body.light-theme {
 
   }
 
-
 body {
   font-family: 'Lora', serif;
   color: var(--text-color);
   font-size: 16px;
   background-color: var(--background-color);
   margin: 2;
-  max-width: 1400px;
   padding: 2px;
 }
 
@@ -188,11 +186,16 @@ a:hover {
   /* right column */
   .rightcolumn {
     float:left;
-    width: 28%;
+    width: 25%;
     padding-left: 20px;
     margin-top: 20px;
     margin-left: 20px;
+    margin-right: 10px;
     background-color: var(--frame-color);
+  }
+
+  .right-column-text {
+    padding-right: 5px;
   }
   
   /* Clear floats after the columns */
@@ -215,7 +218,16 @@ a:hover {
   transition: 0.3s;
 }
 
+.new-examples {
+  border-radius: 5px;
+  width: 70%;
+}
+
 .examples:hover {
+  opacity: 0.7;
+}
+
+.new-examples:hover {
   opacity: 0.7;
 }
 
@@ -345,5 +357,9 @@ input[type=submit]:hover {
 
 .pull-right {
   float: right;
+}
+
+.disclaimer-left {
+  float:left;
 }
 
