--- a/fmg.css
+++ b/fmg.css
@@ -388,4 +388,5 @@ input[type=submit]:hover {
 a.disclaimer-links:link {color: black};
 a.disclaimer-links:visited {color: black;}
 a.disclaimer-links:hover {color: #fe666f;}
+.x-large {font-size: 24px;}
 
