--- a/fmg.css
+++ b/fmg.css
@@ -2,7 +2,8 @@
 ======================================
 ; Title: fmg.css 
 ; Author: Chris Gorham
-; Date: 11 Jan 2023
+; Date Created: 11 Jan 2023
+: Last Updated: 04 Feb 2023
 ; Description: This code establishes the styling for the entire site
 ; Sources Used: W3 Schools CSS Template https://www.w3schools.com/css/css_templates.asp
 ;=====================================
@@ -101,10 +102,6 @@ a:visited {
 
 a:hover {
     color: var(--link-hover);
-}
-
-.disclaimer {
-    text-align: center;
 }
 
 #examples {
@@ -370,7 +367,7 @@ input[type=submit]:hover {
 .page-margin-right{
   margin-right:16px!important}
 
-#stuff-centered {
+.stuff-centered {
   text-align: center;
   float: center;
 }
