--- a/fmg.css
+++ b/fmg.css
@@ -67,26 +67,6 @@ h3 {
     font-size: 72px;
 }
 
-.footer {
-  overflow: hidden;
-  background-color: #fecac4;
-  font-family: 'Lora', serif;
-  color: #000;
-  padding: 16px;
-}
-
-.footer a {
-  padding: 16px;
-  text-decoration: none;
-  color: #000;
-}
-
-.footer a:visited {
-  padding: 16px;
-  text-decoration: none;
-  color: #000;
-}
-
 .toggle {
   font-family: 'Lora', serif;
     font: size 16px;
@@ -146,8 +126,8 @@ a:hover {
   /* Responsive layout - makes a two column-layout instead of four columns */
   @media screen and (max-width: 800px) {
     .column {
-      flex: 50%;
-      max-width: 50%;
+      flex: 100%;
+      max-width: 100%;
     }
 
     .hidden-mobile {
@@ -155,15 +135,7 @@ a:hover {
     }
   }
   
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      flex: 100%;
-      max-width: 100%;
-    }
-  }
 
-  
   /* Style the header */
   .header {
     background-color: var(--background-color);
@@ -303,7 +275,7 @@ a:hover {
   to {transform:scale(1)}
 }
 
-/* The Close Button */
+/* The Modal Close Button */
 .close {
   position: absolute;
   top: 15px;
@@ -365,8 +337,10 @@ input[type=submit]:hover {
   background-color: lightblue;
 }
 
+/* floats, margins, and alignments */
+
 .page-margin-right{
-  margin-right:16px!important}
+  margin-right:16px}
 
 .stuff-centered {
   text-align: center;
@@ -380,6 +354,28 @@ input[type=submit]:hover {
 .disclaimer-left {
   float:left;
 }
+
+/* Footer Stuff */
+.footer {
+  overflow: hidden;
+  background-color: #fecac4;
+  font-family: 'Lora', serif;
+  color: #000;
+  padding: 16px;
+}
+
+.footer a {
+  padding: 16px;
+  text-decoration: none;
+  color: #000;
+}
+
+.footer a:visited {
+  padding: 16px;
+  text-decoration: none;
+  color: #000;
+}
+
 
 /* Styles the links and icons in the footer */
 a.disclaimer-links:link {color: black};
