--- a/fmg.css
+++ b/fmg.css
@@ -123,7 +123,7 @@ a:hover {
     width: 100%;
   }
   
-  /* Responsive layout - makes a two column-layout instead of four columns */
+  /* Responsive layout - makes one column-layout instead of four columns and allows for individual components to be hidden on mobile (.hidden-mobile) */
   @media screen and (max-width: 800px) {
     .column {
       flex: 100%;
@@ -194,13 +194,6 @@ a:hover {
     content: "";
     display: table;
     clear: both;
-  }
-  
-  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column.side, .column.middle {
-      width: 100%;
-    }
   }
 
 .examples {
